New temporary section: humanities; Montaigne quote
New temporary section about humanities (some content from the intro
section moved to humanities; most content is new).
New quote: 'Philosopher, c'est apprendre à mourir' (Montaigne).

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -31,20 +31,25 @@
 
   <main>
     <blockquote id="introquote">
+      <p lang="fr">
+        <q cite="https://archive.org/details/QuePhilosopherCEstApprendreAMourir">Philosopher, c'est apprendre à mourir </q>
+        (<span lang="en">To philosophise is to learn to die.</span>)
+        <cite><a href="https://fr.wikipedia.org/wiki/Michel_de_Montaigne">Michel de Montaigne</a>, 
+        <a href="https://fr.wikipedia.org/wiki/Essais" class="booktitle">Essais</a>, Livre 1 (1580).
+        </cite>
+      </p>
+    </blockquote>
+    <!--blockquote id="introquote">
       <p>
         <q cite="https://en.wikiquote.org/wiki/Philosophy#D">The first step towards philosophy is incredulity.</q>
         <cite><span lang="fr">Denis Diderot</span>, <span class="booktitle">Last Conversation</span>. 
           Reported in Hoyt's <span class="booktitle">New Cyclopedia Of Practical Quotations</span> (1922), p. 596-97.
         </cite>
       </p>
-    </blockquote>
-    <p>
-      For starters,
-      you can watch some YouTube videos (see below).
-      Also check the list of 
-      <a href="http://www.openculture.com/philosophy_free_courses">Free Online 
-      Philosophy Courses</a> on Open Culture. 
-    </p>
+    </blockquote-->
+    <!-- @@move this quote to a skepticism page -->
+
+  <!-- also check Open University playlist "Philosophy": https://www.youtube.com/playlist?list=PLD3908045CB2ACBA7 -->
 
     <h2>General Philosophy</h2>
     <h3>Philosophy: Definition and Benefits</h3>
@@ -64,12 +69,6 @@
         panic and lose perspective.
       </li>
       <li>
-        <a href="https://www.youtube.com/watch?v=4D0fLisyjBY">Why Arts 
-        Graduates Are Under-Employed</a> is another video by
-        The School of Life. It discusses the value of arts and humanities,
-        which includes philosophy.
-      </li>
-      <li>
         <a href="https://www.youtube.com/watch?v=j2xyE5ijWL4">The Benefits of 
         Philosophy and Reason</a> is a 10-minute talk by 
         <a href="https://en.wikipedia.org/wiki/Kenneth_Allen_Taylor">Kenneth 
@@ -87,7 +86,7 @@
         <a href="https://en.wikipedia.org/wiki/The_unexamined_life_is_not_worth_living">the
         unexamined life is not worth living</a>.)
         <!-- See also: 
-          * Simon Longtaff: "The unexamined life is not worth living", New Philosopher, 2 June 2013: http://www.newphilosopher.com/articles/being-fully-human/ 
+          * Simon Longtaff [@@check spelling]: "The unexamined life is not worth living", New Philosopher, 2 June 2013: http://www.newphilosopher.com/articles/being-fully-human/ 
           * "Socrates: An unexamined life is not worth living", 3 May 2012: http://www.the-philosophy.com/unexamined-life-worth-living-socrates 
         -->
       </li>
@@ -104,6 +103,11 @@
     </ul>
 
     <h3>Introductory Lectures and Videos</h3>
+    <p>
+      Also check the list of 
+      <a href="http://www.openculture.com/philosophy_free_courses">Free Online 
+      Philosophy Courses</a> on Open Culture. 
+    </p>
     <ul>
       <li>
         <a href="https://www.youtube.com/playlist?list=PL2FEB728FF960FBD9">General Philosophy</a>:
@@ -121,7 +125,6 @@
         <a href="http://podcasts.ox.ac.uk/open">other content available under 
         Creative Commons</a>.)
       </li>
-      <!-- Oxford Open Content: The Value of Humanities: http://podcasts.ox.ac.uk/series/value-humanities (2013) -->
       <!-- Oxford Open Content: A Romp Through the Philosophy of Mind: http://podcasts.ox.ac.uk/series/romp-through-philosophy-mind (2012) -->
       <!-- Oxford Open Content: Philosophy for Beginners: http://podcasts.ox.ac.uk/series/philosophy-beginners (2009) -->
       <!-- Nietzsche on Mind and Nature: http://podcasts.ox.ac.uk/series/nietzsche-mind-and-nature -->
@@ -129,6 +132,9 @@
       <!-- Peter Millican: 
             Introduction to David Hume's Treatise of Human Nature Book One: http://podcasts.ox.ac.uk/series/introduction-david-humes-treatise-human-nature-book-one 
             Hume's Central Principles: http://podcasts.ox.ac.uk/series/humes-central-principles & https://www.youtube.com/playlist?list=PLlGKhJRyG0snD8_1q3ZnL7dQEfPN0dm9H 
+      -->
+      <!-- K.U. Leuven - Institute of Philosophy: 
+        Open Online Courses in Philosophy : http://hiw.kuleuven.be/eng/openonlinecourse
       -->
       <li>
         <a href="https://www.youtube.com/playlist?list=PL656A4EDA0320618D">Introduction to Philosophy</a>:
@@ -153,23 +159,6 @@
         <a href="https://www.youtube.com/playlist?list=PLS8vfA_ckeuajfjveh_zjUxa17bydKkJN">Introduction to Social &amp; Political Philosophy</a>.
       </li>
       <!-- PhilosophyOwl: https://www.youtube.com/user/PhilosophyOwl/feed  -->
-      <li>
-        <a href="https://www.youtube.com/user/schooloflifechannel">The School of Life</a>
-        is a YouTube channel started by people who are
-        <q cite="https://www.youtube.com/user/schooloflifechannel/about">fascinated 
-        by the sort of questions we're never taught enough about at school or college: 
-        How can relationships go well? What is meaningful work? How can love last? 
-        How can one find calm? What's gone wrong (and right) with capitalism?</q>
-        The makers of this channel also say,
-        <q>We love the humanities, especially philosophy, psychotherapy, literature and art - 
-        always going to them in search of ideas that are thought-provoking, useful and consoling.</q>
-        The channel started in September 2014; the videos are typically between 
-        2 and 10 minutes long.<br />
-        The YouTube channel is only part of this initiative. See also
-        <a href="http://www.theschooloflife.com/london/">www.theschooloflife.com</a>
-        and 
-        <a href="http://www.thebookoflife.org/">www.thebookoflife.org</a>.
-      </li>
       <li>
         <a href="https://www.youtube.com/user/shinobirastafari/videos">The 
         Partially Examined Life</a> is a YouTube channel with podcasts
@@ -292,9 +281,10 @@
         Jules Evans: 
         <a href="https://www.youtube.com/watch?v=XuwYvFlNGns">How philosophy can save your life</a>,
         a talk at TEDx Breda, 2013. 
-        (<a href="https://en.wikipedia.org/wiki/Cognitive_behavioral_therapy">cognitive behavioral therapy</a>
-        and 
-        <a href="https://en.wikipedia.org/wiki/Epictetus">Epictetus</a>)
+        (Part of this talk is about
+        <a href="https://en.wikipedia.org/wiki/Cognitive_behavioral_therapy">cognitive behavioural therapy</a>
+        and how Albert Ellis was influenced by the Stoic philosopher
+        <a href="https://en.wikipedia.org/wiki/Epictetus">Epictetus</a>.)
       </li>
     </ul>
 
@@ -365,7 +355,7 @@
       </li>
     </ul>
 
-    <h3>Critical Thinking and Reasoning</h3>
+    <h3>Critical Thinking and Reasoning (Including Logic)</h3>
     <ul>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLA795AB5BDDD2B0B3">Critical 
@@ -403,6 +393,17 @@
         <a href="https://www.youtube.com/user/CriticalThinkingOrg/playlists">playlists</a>;
         most of these focus on how to teach and assess critical thinking.
       </li>
+      <li>Cecilia Mun:
+        <a href="https://www.youtube.com/watch?v=AKjxZMbYr2U">Introduction to 
+        Logic</a>.
+        This is the first of a series of video lectures from an online 
+        introduction of philosophy. The chapters from the series correspond to
+        the chapters in
+        <a href="http://edu.cengage.co.uk/catalogue/product.aspx?isbn=1285196546" 
+        class="booktitle">A Concise Introduction to Logic</a> by Patrick Hurley
+        (Cengage Learning, 2014; in spite of the title, this book has 736 pages).
+        <!-- ISBN-13: 9781285196541 -->
+      </li>
       <li>
         <a href="https://en.wikipedia.org/wiki/Critical_thinking">Critical thinking</a>:
         article on Wikipedia (in need of improvement).
@@ -439,6 +440,7 @@
         Analogy and Analogical Reasoning (Stanford Encyclopedia of Philosophy): http://plato.stanford.edu/entries/reasoning-analogy/
       -->
     </ul>
+
 
     <h2>History of Philosophy</h2>
     <h3>A Little History of Philosophy (2012)</h3>
@@ -556,6 +558,28 @@
       -->
     </ul>
 
+    <h3>Daniel Dennett</h3>
+    <ul>
+      <li>Zawidzki, Tadeusz:
+        <span class="booktitle">Dennett</span>. Oneworld Thinkers.
+        Oneworld Publications,<!-- May --> 2007.
+        <abbr>ISBN</abbr> 978-1-85168-484-7 (210 pages).
+      </li>
+      <li>Brook, Andrew; Ross, Don (editors):
+        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/twentieth-century-philosophy/daniel-dennett"
+        class="booktitle">Daniel Dennett</a>.
+        Cambridge University Press, 2002.
+        <abbr>ISBN</abbr> 9780521008648 (320 pages).
+      </li>
+    </ul>
+    <!-- Misc
+      KULeuven Institute of Philosophy: Programmes, Teaching and Exam Information: http://hiw.kuleuven.be/eng/programmes/index.html
+      HIW: Verkorte bachelor: https://hiw.kuleuven.be/ned/toekomstigestudent/verkortebachelor.html 
+       -> in avondonderwijs: https://hiw.kuleuven.be/ned/avondonderwijs/index.html -> https://hiw.kuleuven.be/ned/avondonderwijs/bachelor.html
+      HIW Writing Lab: http://hiw.kuleuven.be/eng/programmes/writinglab 
+      Radboud Universiteit: Verkort traject Filosofie : http://www.ru.nl/opleidingen/bachelor/filosofie/studieprogramma/verkort-traject/
+    -->
+
 
     <h2>Intellectual Impostures</h2>
     <ul>
@@ -593,6 +617,168 @@
         <q cite="https://en.wikipedia.org/wiki/Luce_Irigaray#cite_ref-10">it privileges 
         the speed of light over other speeds that are vitally necessary to us</q>.
       </li>
+    </ul>
+
+
+    <h2>The Humanities</h2>
+    <p>Editorial note: this section will probably move to a separate page.</p>
+    <p>The English language makes a distinction between &ldquo;science&rdquo;
+      and the &ldquo;humanities&rdquo;, thereby implying that the humanities
+      are not true sciences.
+      This opposition is often expressed as a distinction between 
+      <a href="https://en.wikipedia.org/wiki/Hard_and_soft_science">hard and
+      soft science</a> or, as in C. P. Snow's famous book,
+      <a href="https://en.wikipedia.org/wiki/The_Two_Cultures" 
+      class="booktitle">The Two Cultures</a> (1959).
+      Other languages do not make this distinction and
+      give the study of literature, linguistics, music <abbr>etc.</abbr>
+      names that include a word for science. These disciplines are collectively
+      known as
+      <a href="https://de.wikipedia.org/wiki/Geisteswissenschaft" 
+      lang="de">Geisteswissenschaft(en)</a> in German,
+      <a href="https://es.wikipedia.org/wiki/Humanidades"
+      lang="es">humanidades</a> in Spanish and
+      <a href="https://nl.wikipedia.org/wiki/Alfawetenschappen"
+      lang="nl">alfawetenschappen</a> in Dutch.
+      <br />
+    </p>
+    <p>The humanities (which are usually considered to include philosophy) 
+      have come under pressure after sciences like physics became
+      the model for scientific progress in general.
+      A recent example is the 
+      <a href="http://savemdxphil.com/about/">closing of the Philosophy
+      Department at Middlesex University</a>.
+      Some people have reacted to this by pointing out the value
+      of the humanities to society.
+      The British philosopher 
+      <a href="https://en.wikipedia.org/wiki/A._C._Grayling">A. C. Grayling</a>
+      responded by founding the
+      <a href="https://en.wikipedia.org/wiki/New_College_of_the_Humanities">New
+      College of the Humanities</a> in London, which started offering tuition
+      in 2012. 
+      <!-- @@more about HCH: https://duckduckgo.com/?q=grayling+found+humanities+london  -->
+    </p>
+    <p>(Note: another distinction is between sciences, humanities and 
+      &ldquo;<a href="https://en.wikipedia.org/wiki/Social_science">social
+      science</a>&rdquo; / 
+      <a href="https://fr.wikipedia.org/wiki/Sciences_humaines_et_sociales"
+      lang="fr">sciences humaines et sociales</a> (in French) / 
+      <a href="https://de.wikipedia.org/wiki/Sozialwissenschaften"
+      lang="de">Sozialwissenschaften</a> (in German).
+      There are also defences of the social sciences similar to the 
+      defences of the humanities.)
+      <!-- Defences on social sciences:
+        Simon Bastow: The Impact of the Social Sciences: How Academics and their Research Make a Difference.
+        John D. Brewer: The Public Value of the Social Sciences: An Interpretative Essay.
+      -->
+    </p>
+
+    <ul>
+      <li>
+        <a href="https://www.youtube.com/watch?v=4D0fLisyjBY">Why Arts 
+        Graduates Are Under-Employed</a> is another video by
+        The School of Life. It discusses the value of arts and humanities,
+        which includes philosophy.
+      </li>
+      <!-- Oxford Open Content: The Value of Humanities: http://podcasts.ox.ac.uk/series/value-humanities (2013) -->
+      <li>
+        Martha Nussbaum:
+        <a href="https://www.youtube.com/watch?v=RAwi7UKK-j8">Why Democracy 
+        Needs the Humanities</a>
+        (<a href="http://www.css.edu/about/spotlight-arts-and-lectures/lectures/alworth-center-for-peace-and-justice-lectures.html">Alworth Center for Peace and Justice</a>, 
+        College of St. Sholastica, 23 February 2012).
+        This is an audio recording of a presentation based on the book
+        <a href="http://press.princeton.edu/titles/9112.html" 
+        class="booktitle">Not For Profit: Why Democracy Needs the Humanities</a>
+        (Princeton University Press, 2010, <abbr>ISBN</abbr> 9780691140643).
+        <!-- @@book sample: chapter 1 -->
+        Martha Nussbaum had previously written in defence of 
+        <a href="https://en.wikipedia.org/wiki/Liberal_education">liberal education</a>
+        in her book
+        <a href="http://www.hup.harvard.edu/catalog.php?isbn=9780674179493"
+        class="booktitle">Cultivating Humanity: A Classical Defense of Reform in 
+        Liberal Education</a> (Harvard University Press, 1998.
+        <abbr>ISBN</abbr> 9780674179493).
+        <!-- See also, possibly:
+          "Humanistic Education & Social Justice": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
+          "Creating Capabilities: The Human Development Approach": https://www.youtube.com/watch?v=A_IR1ClD3Ns 
+          "Why Legal Education Needs the Humanities": https://www.youtube.com/watch?v=ocJ0zVmWMkg 
+        -->
+      </li>
+      <li>Jonathan Bate
+        <a href="http://www.bloomsbury.com/uk/the-public-value-of-the-humanities-9781849660631/"
+        class="booktitle">The Public Value of the Humanities</a>.
+        Bloomsbury, 2011. <abbr>ISBN</abbr> 9781849660631.
+      </li>
+      <li>Helen Small:
+        <a href="http://ukcatalogue.oup.com/product/9780199683864.do"
+        class="booktitle">The Value of the Humanities</a>.
+        Oxford University Press, 2013. <abbr>ISBN</abbr> 978-0-19-968386-4.
+      </li>
+      <li>Eleonora Belfiore &amp; Anna Upchurch (editors):
+        <a href="http://www.palgrave.com/page/detail/humanities-in-the-twenty-first-century-eleonora-belfiore/?sf1=barcode&st1=9780230366633"
+        class="booktitle">Humanities in the Twenty-First Century: Beyond Utility 
+        and Markets</a>. Palgrave Macmillan, 2013.
+        <abbr>ISBN</abbr> 9780230366633.
+      </li>
+      <li>Peter Brooks, Hilary Jewett (editors):
+        <a href="http://fordhampress.com/index.php/the-humanities-and-pubic-life-paperback.html"
+        class="booktitle">The Humanities and Public Life</a>.
+        Fordham University Press, 2014. <abbr>ISBN</abbr> 9780823257058.
+      </li>
+      <li>Poul Holm, Arne Jarrick, Dominic Scott: 
+        <a href="http://www.palgrave.com/page/detail/humanities-world-report-2015-poul-holm/?sf1=barcode&st1=9781137500274"
+        class="booktitle">Humanities World Report 2015</a>.
+        Palgrave Macmillan, 2014. 
+        <br/>This book available on a <abbr title="Creative Commons">CC</abbr> BY 
+        licence; you can find it for free on
+        <a href="http://www.palgraveconnect.com/pc/browse/listcollection?pcode=oa">Palgrave Connect</a>
+        <!-- direct link: http://www.palgraveconnect.com/pc/doifinder/10.1057/9781137500281 -->
+        and 
+        <a href="https://www.researchgate.net/publication/268513349_Humanities_World_Report_2015">ResearchGate</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/user/schooloflifechannel">The School of Life</a>
+        is a YouTube channel started by people who are
+        <q cite="https://www.youtube.com/user/schooloflifechannel/about">fascinated 
+        by the sort of questions we're never taught enough about at school or college: 
+        How can relationships go well? What is meaningful work? How can love last? 
+        How can one find calm? What's gone wrong (and right) with capitalism?</q>
+        The makers of this channel also say,
+        <q>We love the humanities, especially philosophy, psychotherapy, literature and art - 
+        always going to them in search of ideas that are thought-provoking, useful and consoling.</q>
+        The channel started in September 2014; the videos are typically between 
+        2 and 10 minutes long.<br />
+        The YouTube channel is only part of this initiative. See also
+        <a href="http://www.theschooloflife.com/london/">www.theschooloflife.com</a>
+        and 
+        <a href="http://www.thebookoflife.org/">www.thebookoflife.org</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=6Sxttk5REkM">Who Killed the 
+        Liberal Arts?</a> is a five-minute YouTube video by
+        <a href="https://www.prageru.com/">Prager University</a>, an
+        <q cite="https://www.prageru.com/frequently-asked-questions">online video 
+        organization</q> (not a university) that 
+        <q cite="https://www.prageru.com/frequently-asked-questions">believe[s] 
+        in the principles that have made America great</q>. In the video, 
+        Heather Mac Donald of the 
+        <a href="https://en.wikipedia.org/wiki/Manhattan_Institute_for_Policy_Research">
+        Manhattan Institute (a conservative American think thank)</a> argues that
+        too many universities have infused the study of the humanities 
+        <q>with the characteristic traits of our time:
+        narcissism, an obsession with victimhood, and a relentless determination
+        to reduce the stunning complexity of the past to identity and class
+        politics</q>.
+      </li>
+      <!-- See also: 
+        * "Scholar to Address Value of Humanities at Public Universities November 4", University of Tennessee, Knoxville: http://tntoday.utk.edu/2015/10/20/scholar-address-humanities-public-universities-november-4/ 
+        * Matthew Long-Middleton & Ross Stinemetz: "The Value Of The Humanities", KCUR, 2 July 2013: http://kcur.org/post/value-humanities#stream/0 
+          - has link to http://humanitiescommission.org/ 
+        * Stephen J. Mexal: "The Unintended Value of the Humanities", The Chronicle of Higher Education, 23 May 2010. http://chronicle.com/article/The-Unintended-Value-of-the/65619 
+        * Paul Benneworth: "Book Review: Humanities in the Twenty-First Century: Beyond Utility and Markets by Eleonora Belfiore and Anna Upchurch", LSE: http://blogs.lse.ac.uk/lsereviewofbooks/2013/07/28/book-review-humanities-in-the-twenty-first-century-beyond-utility-and-markets/
+        * Roger Scruton: "The Humanities in the Face of Brain Science": https://www.youtube.com/watch?v=ocJ0zVmWMkg 
+      -->
     </ul>
 
   </main>
