Philosophy of science: introductory books

--- a/philscience/index.html
+++ b/philscience/index.html
@@ -30,11 +30,8 @@
   </nav>
 
   <main>
-    <p>
-      While waiting for content about philosophy of science,
-      you can watch some YouTube videos:
-    </p>
 
+    <h2>Introductory Lectures (YouTube)</h2>
     <ul>
       <li>
         <a href="https://en.wikipedia.org/wiki/Paul_Hoyningen-Huene" 
@@ -72,7 +69,7 @@
         <a href="https://www.youtube.com/watch?v=MquP2kIvsMQ">part 5 (8 minutes)</a>.
         These videos are from a series of interviews conducted by 
         <a href="https://en.wikipedia.org/wiki/Bryan_Magee">Bryan Magee</a>
-        in the 1980s.
+        that were broadcast by the <abbr>BBC</abbr> in the 1980s.
       </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PL4O7bFNxwUHpxnd77NrkTMeJV67vd1n_p"
@@ -80,7 +77,7 @@
         is a series of lectures taught by 
         <span lang="de">Torsten Wilholt</span> at the 
         <span lang="de">Leibniz Universität Hannover</span>.
-        (45 videos)
+        (45 videos)<!-- @@add length info -->
       </li>
       <li>
         <a href="https://www.youtube.com/playlist?list=PLgSHH6boFf5tYoX6CUjDupfKgj5QajDeW"
@@ -103,6 +100,50 @@
       <!-- TINT CoE : https://www.youtube.com/channel/UCsvtppn7xSVu-7bSiwW7CcQ 
         videos from EPSA Conference 2013? 
       -->
+    </ul>
+
+    <h2>Introductory Books</h2>
+    <p>There are many introductions to philosophy of science on the market.
+      Some are very short (<abbr>e.g.</abbr> the books by Tetens, Okasha and Lecourt) 
+      and primarily aimed at the general public, while others are aimed at students 
+      (<abbr>e.g.</abbr> Chalmers, Wiltsche and Schülein).
+    </p>
+    <ul>
+      <li lang="de">Tetens, Holm: 
+        <span class="booktitle">Wissenschaftstheorie: Eine Einführung</span>. 
+        C. H. Beck, 2013. 
+        <abbr>ISBN</abbr> <a href="http://www.chbeck.de/Tetens-Wissenschaftstheorie/productview.aspx?product=12220838">978-3-406-65331-5</a>.
+      </li>
+      <li>Okasha, Samir: 
+        <span class="booktitle">Philosophy of Science: A Very Short Introduction</span>. 
+        Oxford University Press, 2002. 
+        <abbr>ISBN</abbr> <a href="http://ukcatalogue.oup.com/product/academic/philosophy/science/9780192802835.do#.UVCCFfOTZ8E">978-0-19-280283-5</a>. 
+      </li>
+      <li lang="fr">Lecourt, Dominique: 
+        <span class="booktitle">La philosophie des sciences</span>. Que sais-je? 3624. 
+        5e édition. Paris: Presses Universitaires de France, 2013. 
+        <abbr>ISBN</abbr> 978-2-13-058053-9. 
+      </li>
+      <li lang="de">Eberhard, Kurt: 
+        <span class="booktitle">Einführung in die Erkenntnis- und Wissenschaftstheorie</span>. 
+        Urban-Taschenbücher 386. Stuttgart: Kohlhammer, 1987. 
+      </li>
+      <li>Chalmers, Alan F.: 
+        <span class="booktitle">What Is This Thing Called Science?</span> Fourth edition. 
+        Indianapolis/Cambridge: Hackett Publishing, 2013 (282 p.) 
+        <abbr>ISBN</abbr> <a href="http://www.hackettpublishing.com/philosophy/philosophy-science/what-is-this-thing-called-science-fourth-edition">978-1-62466-038-2</a>. 
+        McGrawHill, 2013 (316 p.) 
+        <abbr>ISBN</abbr> <a href="http://www.mcgraw-hill.com.au/html/9780335262786.html">978 03 35 26 27 86</a>. 
+      </li>
+      <li lang="de">Wiltsche, Harald A.: 
+        <span class="booktitle">Einführung in die Wissenschaftstheorie</span>. 
+        <abbr>UTB</abbr> 3936. Vandenhoeck &amp; Ruprecht, 2013. 
+        <abbr>ISBN</abbr> <a href="http://www.utb-shop.de/einfuhrung-in-die-wissenschaftstheorie-1.html">978 38 25 23 93 67</a>. 
+      </li>
+      <li>Lewens, Tim: 
+        <span class="booktitle">The Meaning of Science: A Pelican Introduction</span>. Pelican, 2015. 
+        <abbr>ISBN</abbr> <a href="http://www.penguin.co.uk/books/the-meaning-of-science/9780141977423/">978-0-141-97742-3</a>. 
+      </li>
     </ul>
 
     <h2>Criticism of Science and Scientism</h2>
