History of science books

--- a/science/index.html
+++ b/science/index.html
@@ -30,7 +30,7 @@
   </nav>
 
   <main>
-    <p>(Temporary page.)</p>
+    <p>This page collects mostly non-academic resources about science.</p>
 
     <h2>YouTube Channels and Videos</h2>
     <ul>
@@ -41,6 +41,12 @@
         <!-- @@add to separate list of sites about science / scientific literacy
           https://en.wikipedia.org/wiki/Sense_About_Science
         -->
+      </li>
+      <li>
+        <a href="https://www.youtube.com/playlist?list=PLhQpDGfX5e7CuUkPlpiW7agdJvdbdTPma">Think
+        Like a Scientist</a> is a playlist of videos by the 
+        Open University.
+        <!-- See other playlists: https://www.youtube.com/user/OUlearn/playlists?view=1&sort=dd -->
       </li>
       <li>
         <a href="https://www.youtube.com/user/NatureVideoChannel">Nature Video</a>,
@@ -70,7 +76,7 @@
       <li>
         <a href="https://www.youtube.com/channel/UCiAcn7mtouzR659xl6uNsOw"
         lang="nl">het denkgelag</a> is the channel of a Belgian 
-        <q cite="http://www.denkgelag.be/">non-profit rofit organization that 
+        <q cite="http://www.denkgelag.be/">non-profit organization that 
         brings together interesting speakers to stimulate public discussion on 
         science and reason and to foster critical thinking</q>.
         The organisation's website is available at
@@ -82,24 +88,27 @@
         The physicist
         <a href="https://en.wikipedia.org/wiki/Richard_Feynman">Richard Feynman</a>
         (1918-1988) invented the term 
-        &ldquo;<a href="https://en.wikipedia.org/wiki/Cargo_cult_science">cargo 
+        &ldquo;<a href="https://en.wikipedia.org/wiki/Cargo_cult_science"
+        title="Wikipedia article about 'cargo cult science'">cargo 
         cult science</a>&rdquo; for his 1974 inaugural lecture 
         at the California Institute of Technology.
         The text of the lecture was later included in his book
         <a href="https://en.wikipedia.org/wiki/Surely_You%27re_Joking,_Mr._Feynman!"
         class="booktitle">Surely You're Joking, Mr. Feynman!</a> (1985),
-        but the text is also available 
-        on the
+        but it is also available on
         <a href="http://calteches.library.caltech.edu/51/2/CargoCult.htm">Caltech's website</a>
-        and
-        <a href="http://www.lhup.edu/~DSIMANEK/cargocul.htm">elsewhere</a>.
-        (See also the
-        <a href="https://en.wikipedia.org/wiki/Oil_drop_experiment">Wikipedia
-        article about Millikan's oil drop experiment</a>.)
+        (and
+        <a href="http://www.lhup.edu/~DSIMANEK/cargocul.htm">elsewhere</a>).
+        <br />Wikipedia has an article about 
+        <a href="https://en.wikipedia.org/wiki/Oil_drop_experiment">Millikan's 
+        oil drop experiment</a>, which Feynman mentions in his lecture.
+        However, nobody has been able to identify the research on rats that
+        Feynman attributes to a certain Mr. Young.
       </li>
     </ul>
 
-    <h2>Books</h2>
+
+    <h2>About Science in General</h2>
     <ul>
       <li>Angier, Natalie: 
         <a href="http://www.faber.co.uk/9780571239726-the-canon.html" 
@@ -127,6 +136,87 @@
         article about <span class="booktitle">Science Friction</span></a>.)
       </li>
     </ul>
+
+
+    <h2>History of Science</h2>
+    <ul>
+      <li lang="nl"><a href="http://cas.ou.edu/rienk-vermij">Vermij, Rienk</a>: 
+        <a href="http://www.nieuwezijds.nl/Boek/9789057122248/Kleine-geschiedenis-van-de-wetenschap/"
+        class="booktitle">Kleine geschiedenis van de wetenschap</a>.
+        Nieuwezijds, 2005. <abbr>ISBN</abbr> 9789057122248 (278 p.).<br />
+        <span lang="en">A very readable introduction that focuses on how 
+        the world view of (originally) philosophers and (later) scientists 
+        evolved and how this changing perspective both gave rise to new
+        methods and was influence by these methods. In addition to the evolution
+        of these methods and theories, the book also discusses the importance
+        of scientific instruments, laboratories and journals.
+      </li>
+      <li lang="de">Störig, Hans Joachim:
+        <span class="booktitle">Kleine Weltgeschichte der Wissenschaft</span>. 
+        S. Fischer, 2007.
+      </li>
+      <li><a href="https://en.wikipedia.org/wiki/William_Cecil_Dampier">Dampier, 
+        William Cecil</a>:
+        <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/history-science-and-its-relations-philosophy-and-religion"
+        class="booktitle">A History of Science and its Relations with Philosophy 
+        and Religion</a>. Cambridge University Press, 1948.
+        <abbr>ISBN</abbr> 9780521093668 (576 pages).
+      </li>
+      <li>Dampier, William Cecil:
+        <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-general-interest/shorter-history-science"
+        class="booktitle">A Shorter History of Science</a>.
+        Cambridge University Press, 2014.
+        <abbr>ISBN</abbr> 9781107672901 (208 pages; originally published in 1944).
+      </li>
+      <li><span class="booktitle">The Cambridge History of Science</span>:
+        <ul>
+          <li>Lindberg, David C.; Shank, Michael H. (editors):
+            <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/cambridge-history-science-volume-2?format=PB"
+            class="booktitle">Volume 2. Medieval Science</a>.
+            Cambridge University Press, 2015. <abbr>ISBN</abbr> 9781107521643.
+          </li>
+          <li>Park, Katharine; Daston, Lorraine (editors):
+            <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/cambridge-history-science-volume-3?format=HB"
+            class="booktitle">Volume 3. Early Modern Science</a>.
+            Cambridge University Press, 2006. 
+          </li>
+          <li>Porter, Roy (editor):
+            <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/cambridge-history-science-volume-4?format=HB"
+            class="booktitle">Volume 4. Eighteenth-Century Science</a>.
+            Cambridge University Press, 2003. 
+          </li>
+          <li>Nye, Mary Jo (editor):
+            <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/cambridge-history-science-volume-5?format=HB"
+            class="booktitle">Volume 5. The Modern Physical and Mathematical Sciences</a>.
+            Cambridge University Press, 2002. 
+          </li>
+          <li>Bowler, Peter J.; Pickstone, John V. (editors):
+            <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/cambridge-history-science-volume-6?format=HB"
+            class="booktitle">Volume 6. Modern Life and Earth Sciences</a>.
+            Cambridge University Press, 2009. 
+          </li>
+          <li>Porter, Theodore M.; Ross, Dorothy (editors):
+            <a href="http://www.cambridge.org/de/academic/subjects/history/history-science-and-technology/cambridge-history-science-volume-7?format=HB"
+            class="booktitle">Volume 7. The Modern Social Sciences</a>.
+            Cambridge University Press, 2003. 
+          </li>
+        </ul>
+      </li>
+      <!-- Mason, Stephen F.: A History of The Sciences. Revised Edition. New York: Collier Books: apparently a "wearisome book": http://www.albany.edu/~scifraud/data/sci_fraud_0270.html -->
+      <!-- Armand Marie Leroi: The Lagoon: How Aristotle Invented Science. Bloomsbury, 2014. ISBN 9781408836200. http://www.bloomsbury.com/uk/the-lagoon-9781408836200/ -->
+      <!-- René Taton: Histoire générale des sciences (4 volumes). Presses Universitaires de France (PUF), 1995 -->
+      <!-- Evolution:
+        Ruse, Michael, editor: The Cambridge Encyclopedia of Darwin and Evolutionary Thought. Cambridge UP, 2013. http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/cambridge-encyclopedia-darwin-and-evolutionary-thought 
+        Gould, Stephen Jay: The Structure of Evolutionary Theory. Harvard University Press. 2002.
+        Daniel C. Dennett: Darwin's Dangerous Idea: Evolution and the Meanings of Life. 1996 (?)
+        Parker, Steve; Roberts, Alice: Evolution: The Whole Story. Thames and Hudson, 2015. 
+        Howard, Jonathan: Darwin: A Very Short Introduction. Oxford University Press, 2001.
+        Charlesworth, Brian; Charlesworth, Deborah: Evolution: A Very Short Introduction. Oxford University Press, 2003.
+        Wood, Bernard: Human Evolution: A Very Short Introduction. Oxford University Press, 2005.
+        Dunbar, Robin: Human Evolution: A Pelican Introduction. Pelican, 2014. 
+      -->
+    </ul>
+
 
     <h2>Registering All Medical Trials</h2>
     <p>The British physician <a href="https://en.wikipedia.org/wiki/Ben_Goldacre">Ben
@@ -183,6 +273,10 @@
         <a href="https://en.wikipedia.org/wiki/AllTrials">AllTrials</a>.
       </li>
     </ul>
+    <!-- Fraud: 
+      A. C. Higgins: Science Fraud Database: http://www.albany.edu/~scifraud/index.html
+      Polšek, Darko: "Two Ways of Dealing With Scientific Fraud", 1998: https://www.academia.edu/3791360/Two_Ways_of_Dealing_With_Scientific_Fraud_1998_
+    -->
 
   </main>
 
