Fixed link to Ioannidis page.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <li><a href="./philosophy/index.html">Philosophy</a></li>
       <li><a href="./science/index.html">Science</a>
         <ul>
-          <li><a href="../science/ioannidis.html" 
+          <li><a href="./science/ioannidis.html" 
             title="Ioannidis on why most published research findings are false">John Ioannidis</a>
           </li>
         </ul>
