--- a/science/ioannidis.html
+++ b/science/ioannidis.html
@@ -37,7 +37,7 @@
       Most Published Research Findings Are False</a></strong>&rdquo; in the journal
       <a href="http://journals.plos.org/plosmedicine/s/journal-information" 
       class="journal">PLOS Medicine</a> (2.8 (August 2005): e124). The article led 
-      to debate in mass media, on blogs by scientist and in journals, 
+      to debate in mass media, on blogs by scientists and in journals, 
       and to follow-up articles and lectures by Ioannidis, for example:
     </p>
     <ul>
@@ -149,18 +149,16 @@
   </main>
 
   <footer>
-    <p>
+    <p class="licence">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"><img 
       alt="Creative Commons License" style="border-width:0" 
       src="https://i.creativecommons.org/l/by-nc-sa/4.0/88x31.png" /></a><br />
-      <a href="http://purl.org/dc/dcmitype/Text" 
-      property="dct:title" rel="dct:type">Philosophy and Science</a> by 
-      <a 
-      href="https://github.com/cstrobbe" property="cc:attributionName" 
+      <span xmlns:dct="http://purl.org/dc/terms/" href="http://purl.org/dc/dcmitype/Text" 
+      property="dct:title" rel="dct:type">Philosophy and Science</span> by 
+      <a xmlns:cc="http://creativecommons.org/ns#" href="https://github.com/cstrobbe" property="cc:attributionName" 
       rel="cc:attributionURL">Christophe Strobbe</a> is licensed under a 
-      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/"
-      lang="en-US">Creative 
-      Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/" 
+      lang="en-US">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.
     </p>
   </footer>
 </body>
